# KiCad-MCP

./: .gitignore  AUDIT_REPORT.md  Audit_Results_02272026.md  CLAUDE.md  JLCPCB_Integration_Plan.md  README.md  TODO.md  main.py  pyproject.toml
.github/workflows/: ci.yml
src/kicad_mcp/: backend_manager.py  cache.py  constants.py  exceptions.py  library.py  logging_config.py  rate_limiter.py  schematic_state.py  security.py  server.py  state.py  sync.py  validation.py
src/kicad_mcp/algorithms/: __init__.py  astar.py  grid.py  placement.py  types.py
src/kicad_mcp/backends/: __init__.py  ipc_api.py  kicad_cli.py
src/kicad_mcp/manufacturers/: __init__.py  jlcpcb.py  presets.py
src/kicad_mcp/prompts/: __init__.py  templates.py
src/kicad_mcp/resources/: __init__.py  board.py
src/kicad_mcp/schema/: __init__.py  board.py  common.py  drc.py  extract.py  library.py  (+2 more)
tests/benchmark/: test_performance.py
tests/fixtures/: minimal_board.kicad_pcb
tests/integration/: test_kicad_cli.py  test_server.py  test_session_workflow.py
tests/unit/: test_astar.py  test_autoplacement_tools.py  test_autoroute_tools.py  test_board_setup.py  test_cache.py  test_drc_parsing.py  test_force_placement.py  test_grid.py  test_ipc_api.py  test_jlcpcb.py  test_kicad_cli_errors.py  test_layer_mapping.py  test_library.py  test_manufacturer.py  test_netzone.py  test_parity.py  test_placement.py  test_project.py  test_rate_limiter.py  test_resources.py  test_router.py  test_routing.py  test_schema.py  test_schematic.py  test_security.py  test_session.py  test_sexp_parser.py  test_sync.py
(+33 files in other folders)
