[project]
name = "kicad-mcp"
version = "0.1.0"
description = "KiCad MCP server for AI-assisted PCB design — analyze, modify, route, verify, and export"
readme = "README.md"
license = "GPL-3.0-or-later"
requires-python = ">=3.11"
dependencies = [
    "fastmcp>=2.0",
]

[project.optional-dependencies]
ipc = ["kicad-python>=0.5"]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "ruff>=0.9",
    "mypy>=1.14",
]
all = ["kicad-python>=0.5"]

[project.scripts]
kicad-mcp = "kicad_mcp.server:main"

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM", "TCH"]
ignore = ["TC001", "TC002", "TC003"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
